# FlightPriceTracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run.bat  run.command  trips.example.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
app/: __init__.py  checker.py  config.py  db.py  main.py  notifier.py  reporter.py  scheduler.py  serpapi.py
app/api/: __init__.py  routes.py  schemas.py
docs/: email_preview.html  report_preview.html
tests/: __init__.py  test_api.py  test_checker.py  test_notifier.py  test_reporter.py  test_serpapi.py
